plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.9'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.allforone'
version = '0.0.1-SNAPSHOT'
description = 'starvestop'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    testImplementation 'org.springframework.security:spring-security-test'
    implementation 'org.hibernate.orm:hibernate-spatial'
    implementation 'org.n52.jackson:jackson-datatype-jts:1.2.10'
    implementation 'org.redisson:redisson-spring-boot-starter:4.1.0'
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6"

    //Webflux
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // Bcrypt
    implementation 'at.favre.lib:bcrypt:0.10.2'

    // JWT
    implementation "io.jsonwebtoken:jjwt-api:0.12.5"
    runtimeOnly "io.jsonwebtoken:jjwt-impl:0.12.5"
    runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.12.5"

    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus'

    //querydsl
    implementation 'io.github.openfeign.querydsl:querydsl-core:6.12'
    implementation 'io.github.openfeign.querydsl:querydsl-jpa:6.12'
    annotationProcessor 'io.github.openfeign.querydsl:querydsl-apt:6.12:jpa'
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    //s3
    implementation 'software.amazon.awssdk:s3:2.40.13'

    //webSocket
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    //fcm
    implementation 'com.google.firebase:firebase-admin:9.7.1'
}

tasks.named('test') {
    useJUnitPlatform()
}

test {
    useJUnitPlatform {
        excludeTags 'concurrency'
    }
}